<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="orderSummary">Order Summary</string>
    <string name="order">Order</string>
    <string name="summaryName">Name: <xliff:g id="name" example="John">%s</xliff:g></string>
    <string name="addWhippedCream">Add Whipped Cream? </string>
    <string name="addChocolate">Add Chocolate? </string>
    <string name="summaryQuantity">Quantity: </string>
    <string name="summaryTotal">Total: $<xliff:g id="number" >%s</xliff:g></string>
    <string name="summaryThankYou">Thank You!</string>
</resources>
